--- a/front/src/lib/styles/base/transitions.css
+++ b/front/src/lib/styles/base/transitions.css
@@ -20,7 +20,8 @@ body {
   .main.secondary {
     opacity: 0;
     transition: opacity;
-    @apply dg--transition-effect;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
   }
   .flourish {
     transition-property: background-color, opacity;
@@ -31,7 +32,6 @@ body {
       transition: border 0.5s;
       transition-delay: 2s;
       box-shadow: none !important;
-      @apply shadow-none;
       border-top: 8px solid transparent;
       background-color: transparent;
     }
@@ -46,8 +46,9 @@ body {
       transition-property: background-color, opacity;
     }
     .main section {
-      transition: opacity, background-color;
-      @apply dg--transition-effect;
+      transition-duration: var(--transition-duration);
+      transition-property: opacity, background-color;
+      transition-timing-function: var(--transition-timing-function);
     }
     .footer {
       transition: opacity 0.3s;
@@ -59,12 +60,12 @@ body {
         transition: max-height 1s ease-in-out 1s;
         box-shadow: none !important;
         border-color: rgb(var(--foreground-rgb));
-        @apply shadow-none;
       }
       .main section {
-        @apply dg--transition-effect
-      opacity-0
-      transition-opacity;
+        opacity: 0;
+        transition-duration: var(--transition-duration);
+        transition-property: opacity;
+        transition-timing-function: var(--transition-timing-function);
       }
       .scroll-top,
       .footer {
