--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -7,13 +7,11 @@
   margin: 0;
   padding-bottom: 0;
   list-style-type: none;
-  @screen sm {
+  @media screen and (min-width: 640px) {
     gap: 0.5rem;
   }
-  @screen md {
-    gap: 1rem;
-  }
   @media screen and (min-width: 768px) {
+    gap: 1rem;
     padding-bottom: 4rem;
   }
   .post-item {
@@ -133,7 +131,7 @@
     &:nth-child(n + 3) {
       grid-row: span 12;
     }
-    @screen sm {
+    @media screen and (min-width: 640px) {
       &:first-child {
         grid-row: span 12;
         grid-column: span 4;
