--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -11,11 +11,11 @@
     padding: 0 2.33rem 5rem 2rem;
   }
   .category-head {
-    @apply dg--font-lb;
     display: flex;
     position: relative;
     flex-direction: column;
     align-items: center;
+    font-family: var(--font-lb);
     h1.page-heading {
       padding-bottom: 0.5rem;
     }
@@ -36,7 +36,7 @@
   .category-posts-list,
   .aside {
     position: relative;
-    @screen md {
+    @media screen and (min-width: 768px) {
       padding-top: 0;
     }
   }
