--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -26,15 +26,15 @@
   }
   .masthead {
     display: block;
-    @screen sm {
+    @media screen and (min-width: 640px) {
       position: absolute;
       top: -2rem;
       left: 1.33rem;
     }
   }
   h1.title {
-    @apply dg--font-psbl
-      mt-0;
+    margin-top: 0;
+    font-family: var(--font-psbl);
   }
   h2.date mark {
     display: inline-block;
@@ -55,10 +55,10 @@
     list-style-type: none;
   }
   li:first-of-type {
-    @apply mb-5;
+    margin-bottom: 1.25rem;
   }
   ol {
-    @apply mb-5;
+    margin-bottom: 1.25rem;
   }
   ol > li {
     counter-increment: item;
