--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -32,7 +32,7 @@
 .nav-home {
   vertical-align: bottom;
   transition: unset;
-  transition: font-size, color;
+  transition-property: font-size, color;
   transition-duration: var(--transition-duration-md);
   transition-timing-function: var(--transition-timing-function);
   will-change: color;
