--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -14,6 +14,7 @@
   transition-property: max-width;
   padding-right: 1rem;
   padding-left: 1rem;
+  text-align: center;
   .image-loader {
     margin: 0.5rem 0;
   }
@@ -66,8 +67,8 @@
     padding-top: 1.75rem;
   }
   a {
-    transition-property: color, border-color;
     transition-duration: var(--transition-duration);
+    transition-property: color, border-color;
     border-bottom: 1px solid;
   }
 }
